# advent_of_code

./: .clang-format  .gitignore  .tool-versions  go.mod  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.dev.txt  requirements.txt  tsconfig.json
2020/01/python/: __init__.py
2020/01/rust/: Cargo.toml
2020/01/rust/src/: main.rs
2021/awk/3/: p1.awk  spec
2021/awk/3/output/: p1.txt
2021/c/5/: soln.c
2021/elixir/6/: soln.exs  spec
2021/java/4/bingo/: Board.java
2021/julia/7/: soln.jl
2021/perl/2/: p2.pl
2021/perl/2/output/: p1.txt  p2.txt
2021/php/9/: spec
2021/python/1/: part_one.py  spec
2021/python/11/: soln.py
2021/ruby/8/: solve.rb  spec
2023/golang/1/cmd/: main.go
2023/python/13/: solution.py  test_solution.py
2024/01/python/: __init__.py
2024/02/python/: __init__.py
2024/03/python/: __init__.py
2024/04/python/: __init__.py
2024/05/python/: __init__.py
cpp/: .clangd
golang/: go.mod
golang/advent_of_code/trie/: trie.go  trie_test.go
golang/lib/: lib.go
golang/lib/grid/: grid_test.go
lib/golang/lib/: grid.go  grid_test.go  io.go  trie.go  trie_test.go
python/: pyproject.toml  requirements.txt
rust/: Cargo.toml
templates/golang/: challenge.txt.templ  main.go.templ
templates/golang/cmd/: main.go.templ
templates/golang/solution/: solution.go.templ  solution_test.go.templ
templates/python/: solution.py.templ  test_solution.py.templ
tool/internal/: download.go  download_test.go  language.go  language_test.go
tool/render/: main.go  options.go  render.go
tool/template/: main.go
(+74 files in other folders)
