[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "advent_of_code"
version = "0.1.0"
description = "My solutions to the Advent of Code"
authors = [{ name = "Vittorio Dinovi", email = "vito.dinovi@gmail.com" }]
readme = "README.md"
license = { text = "UNLICENSED" }
keywords = ["advent of code", "puzzles", "challenges"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "black>=24.10", "flake8>=7.1", "mypy>=1.13"]

[tool.setuptools]
packages = ["advent_of_code"]
package-dir = { "" = "python/src" }
